feat(auth): add manager feature permissions